<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/statusCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/cardview_corner_radius"
    card_view:cardElevation="@dimen/cardview_elevation"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="@dimen/cardview_content_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView">

            <RadioButton
                android:id="@+id/autoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true"
                android:text="@string/status_auto"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/publishS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true"
                android:text="@string/status_publish"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/privateS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/status_private"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/pendingS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/status_pending"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/draftS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/status_draft"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/trashS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/status_trash"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/futureS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/status_future"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/future"
                android:focusableInTouchMode="true"
                android:padding="5dp">

                <EditText
                    android:id="@+id/statusDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status_date"
                    android:text="" />

            </android.support.design.widget.TextInputLayout>
        </RadioGroup>
    </RelativeLayout>

</android.support.v7.widget.CardView>
