<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PEActivity">
    <item
        android:id="@+id/searchB"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always|collapseActionView"
        />
    <item
        android:id="@+id/okB"
        android:orderInCategory="100"
        android:title="@string/menu_done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="always|collapseActionView"
        />

</menu>
