<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="name.z_dev.peditor.AccountingFragment"
    android:id="@+id/ainglout">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarA"
                android:elevation="@dimen/toolbar_elevation"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:subtitle="@string/accounting">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/fab_margin"
            android:elevation="@dimen/fab_elevation"
            android:src="@drawable/ic_arrow_forward_white_24dp"
            app:backgroundTint="@color/ColorPrimary" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollViewAccounting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/cardview_content_padding">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_corner_radius"
                card_view:cardElevation="@dimen/cardview_elevation"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="@dimen/cardview_content_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/nameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/connaction_name"
                            android:text="name" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/view">

                        <EditText
                            android:id="@+id/urlEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/connaction_url"
                            android:singleLine="true"
                            android:text="url" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view1"
                card_view:cardCornerRadius="@dimen/cardview_corner_radius"
                card_view:cardElevation="@dimen/cardview_elevation"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="@dimen/cardview_content_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/loadPosts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/connaction_load_posts" />

                        <RadioButton
                            android:id="@+id/loadPages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/connaction_load_pages" />
                    </RadioGroup>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_view3">

                <!--<TextView-->
                <!--android:id="@+id/moreT"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_below="@+id/relativeLayout"-->
                <!--android:text="@string/connaction_other_settings"-->
                <!--android:textColor="@color/abc_input_method_navigation_guard"-->
                <!--android:textSize="20sp"-->
                <!--android:padding="7dp"/>-->

                <!--<ImageView-->
                <!--android:id="@+id/moreI"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignBottom="@+id/moreT"-->
                <!--android:layout_alignTop="@+id/moreT"-->
                <!--android:layout_toEndOf="@+id/moreT"-->
                <!--android:layout_toRightOf="@+id/moreT"-->
                <!--android:src="@drawable/ic_expand_more_black_24dp" />-->


                <RelativeLayout
                    android:id="@+id/moreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card_view2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardCornerRadius="@dimen/cardview_corner_radius"
                        card_view:cardElevation="@dimen/cardview_elevation"
                        card_view:cardUseCompatPadding="true"
                        card_view:contentPadding="@dimen/cardview_content_padding">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <CheckBox
                                android:id="@+id/useAuth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/connaction_use_auth"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/view3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_below="@id/useAuth">

                                <EditText
                                    android:id="@+id/loginEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/connaction_login"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/view4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_below="@+id/view3">

                                <EditText
                                    android:id="@+id/passwordEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/connaction_password"
                                    android:inputType="textPassword"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/view5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_below="@+id/view4">

                            </android.support.design.widget.TextInputLayout>

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_below="@+id/moreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
